# voxpool

./: .gitignore  CMakeLists.txt  README.md  VoxPool.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/components/: ControlsBlock.h  FaderBlock.h  FooterBlock.h  Knob.h  LAFs.h  Meter.h  TitleBlock.h
Source/util/: colors.h  types.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/: ControlsBlock.h  FaderBlock.h  FooterBlock.h  Knob.h  LAFs.h  Meter.h  TitleBlock.h
src/util/: colors.h  fonts.h  types.h
